--- a/0x00-projects/01-basketball_trackboard-project/index.html
+++ b/0x00-projects/01-basketball_trackboard-project/index.html
@@ -27,9 +27,9 @@
             </div>
         </div>
         <div class="reset-buttons">
-            <button class="reset-btn reset-home" onclick="resetHome()">RESET HOME</button>
+            <button class="reset-btn reset-home" onclick="resetHome()">RESET TEAM 1</button>
             <button class="reset-btn reset-all" onclick="reset()">RESET ALL</button>
-            <button class="reset-btn" onclick="resetGuest()">RESET GUEST</button>
+            <button class="reset-btn" onclick="resetGuest()">RESET TEAM 2</button>
         </div>
         <script src="index.js"></script>
     </body>
